Native JSON.stringify does not omit functions https://bugs.webkit.org/show_bug.cgi?id=28117

Reviewed by Gavin Barraclough

Objects that are callable should be treated as undefined when
serialising to JSON.


Canonical link: https://commits.webkit.org/38687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47086 268f45cc-cd09-0410-ab3c-d52691b4dbfc